.k8s/admin-tools/pgbouncer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-${DB_CONNECTION_NAME}
  labels:
    app: pgbouncer-${DB_CONNECTION_NAME}
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: pgbouncer-${DB_CONNECTION_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer-${DB_CONNECTION_NAME}
  labels:
    app: pgbouncer-${DB_CONNECTION_NAME}
spec:
  selector:
    matchLabels:
      app: pgbouncer-${DB_CONNECTION_NAME}
  template:
    metadata:
      labels:
        app: pgbouncer-${DB_CONNECTION_NAME}
    spec:
      volumes:
      - name: config
        configMap:
          name: pgbouncer-tls
          items:
          - key: "BaltimoreCyberTrustRoot.crt.pem"
            path: "BaltimoreCyberTrustRoot.crt.pem"
          - key: "userlist.txt"
            path: "userlist.txt"
      containers:
        - name: pgbouncer
          image: pgbouncer/pgbouncer
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: config
            mountPath: "/config"
            readOnly: true
